# stocksim-sdk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/stocksim_sdk/: __init__.py  client.py  exceptions.py  models.py
src/tests/: test_client.py
