[project]
name = "stocksim-sdk"
version = "0.1.1"
description = "Official async Python SDK for StockSim Pro API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.uv.workspace]
members = [
    "stocksim-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
